# rlibutils

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  data.h  kinematic_utils.h  model_utils.cpp  model_utils.h  motioner.cpp  motioner.h  quick_pack.sh  rlibutilsConfig.cmake.in  utils.cpp  utils.h
include/: data.h  macro.h  motioner.h  utils.h
models/: CMakeLists.txt  rs013.urdf  rs020.urdf  rs025.urdf  xMateCR12.urdf  xMateCR7.urdf
rl-3rdparty/include/: iconv.h  nlopt.hpp  superglu.h
rl-3rdparty/include/Inventor/C/: basic.h
rl-3rdparty/include/Inventor/Qt/: SoQt.h  SoQtBasic.h  SoQtColorEditor.h  SoQtComponent.h  SoQtCursor.h  SoQtGLWidget.h  SoQtObject.h  SoQtRenderArea.h
rl-3rdparty/include/Inventor/system/: gl-headers.h  inttypes.h
rl-3rdparty/include/fcl/: config.h  export.h  fcl.h
rl-3rdparty/include/libxml2/libxml/: xmlversion.h
rl-3rdparty/include/ode/: version.h
rl-3rdparty/lib/: Bullet2FileLoader.lib  Bullet2FileLoader_Debug.lib  Bullet3Collision.lib  Bullet3Collision_Debug.lib  Bullet3Common.lib  Bullet3Common_Debug.lib  Bullet3Dynamics.lib  Bullet3Dynamics_Debug.lib  Bullet3Geometry.lib  Bullet3Geometry_Debug.lib  Bullet3OpenCL_clew.lib  Bullet3OpenCL_clew_Debug.lib  BulletCollision.lib  BulletCollision_Debug.lib  BulletDynamics.lib  BulletDynamics_Debug.lib  BulletFileLoader.lib  BulletFileLoader_Debug.lib  BulletInverseDynamics.lib  BulletInverseDynamicsUtils.lib  BulletInverseDynamicsUtils_Debug.lib  BulletInverseDynamics_Debug.lib  BulletRobotics.lib  BulletRoboticsGUI.lib  BulletRoboticsGUI_Debug.lib  BulletRobotics_Debug.lib  BulletSoftBody.lib  BulletSoftBody_Debug.lib  BulletWorldImporter.lib  BulletWorldImporter_Debug.lib  BulletXmlWorldImporter.lib  BulletXmlWorldImporter_Debug.lib  Coin4.lib  Coin4d.lib  ConvexDecomposition.lib  ConvexDecomposition_Debug.lib  GIMPACTUtils.lib  GIMPACTUtils_Debug.lib  GLUs.lib  GLUsd.lib  (+150 more)
rl-3rdparty/lib/ccd/: ccd-targets-debug.cmake  ccd-targets-release.cmake  ccd-targets.cmake
rl-3rdparty/lib/cmake/Coin-4.0.3/: coin-config.cmake  coin-export-debug.cmake  coin-export-release.cmake  coin-export.cmake
rl-3rdparty/lib/cmake/PQP-1.3/: pqp-config-version.cmake  pqp-config.cmake  pqp-export-debug.cmake  pqp-export-release.cmake  pqp-export.cmake
rl-3rdparty/lib/cmake/Qt6/: Qt6Targets.cmake  qt.toolchain.cmake
rl-3rdparty/lib/cmake/Qt6BuildInternals/: QtBuildInternalsExtra.cmake
rl-3rdparty/lib/cmake/Qt6BundledFreetype/: Qt6BundledFreetypeTargets.cmake
rl-3rdparty/lib/cmake/Qt6BundledLibjpeg/: Qt6BundledLibjpegTargets-debug.cmake  Qt6BundledLibjpegTargets-relwithdebinfo.cmake  Qt6BundledLibjpegTargets.cmake
rl-3rdparty/lib/cmake/Qt6BundledLibpng/: Qt6BundledLibpngTargets.cmake
rl-3rdparty/lib/cmake/Qt6Concurrent/: Qt6ConcurrentTargets-relwithdebinfo.cmake  Qt6ConcurrentTargets.cmake
rl-3rdparty/lib/cmake/Qt6Core/: Qt6CoreDependencies.cmake  Qt6CoreTargets.cmake
rl-3rdparty/lib/cmake/Qt6CoreTools/: Qt6CoreToolsAdditionalTargetInfo.cmake  Qt6CoreToolsTargets-relwithdebinfo.cmake  Qt6CoreToolsTargets.cmake
rl-3rdparty/lib/cmake/Qt6DBus/: Qt6DBusTargets-relwithdebinfo.cmake  Qt6DBusTargets.cmake
rl-3rdparty/lib/cmake/Qt6DBusTools/: Qt6DBusToolsTargets.cmake
rl-3rdparty/lib/cmake/Qt6DeviceDiscoverySupportPrivate/: Qt6DeviceDiscoverySupportPrivateTargets.cmake
rl-3rdparty/lib/cmake/Qt6EntryPointPrivate/: Qt6EntryPointPrivateTargets.cmake
rl-3rdparty/lib/cmake/Qt6ExampleIconsPrivate/: Qt6ExampleIconsPrivateTargets.cmake  Qt6ExampleIconsPrivateVersionlessTargets.cmake
rl-3rdparty/lib/cmake/Qt6FbSupportPrivate/: Qt6FbSupportPrivateTargets.cmake
rl-3rdparty/lib/cmake/Qt6FreetypePrivate/: Qt6FreetypePrivateTargets.cmake
rl-3rdparty/lib/cmake/Qt6Gui/: Qt6GuiDependencies.cmake  Qt6GuiTargets.cmake  Qt6QGifPluginTargets.cmake  Qt6QICOPluginTargets.cmake  Qt6QJpegPluginTargets.cmake  Qt6QMinimalIntegrationPluginTargets.cmake  Qt6QOffscreenIntegrationPluginTargets.cmake  Qt6QSvgIconPluginTargets.cmake  Qt6QSvgPluginTargets.cmake  Qt6QTuioTouchPluginTargets.cmake  Qt6QWindowsDirect2DIntegrationPluginTargets.cmake  Qt6QWindowsIntegrationPluginTargets.cmake
rl-3rdparty/lib/cmake/Qt6GuiTools/: Qt6GuiToolsConfigVersionImpl.cmake  Qt6GuiToolsTargets.cmake
rl-3rdparty/lib/cmake/Qt6HarfbuzzPrivate/: Qt6HarfbuzzPrivateTargets.cmake
rl-3rdparty/lib/cmake/Qt6JpegPrivate/: Qt6JpegPrivateTargets.cmake
rl-3rdparty/lib/cmake/Qt6Network/: Qt6NetworkTargets-relwithdebinfo.cmake  Qt6NetworkTargets.cmake  Qt6QNLMNIPluginAdditionalTargetInfo.cmake  Qt6QNLMNIPluginTargets-relwithdebinfo.cmake  Qt6QNLMNIPluginTargets.cmake  Qt6QSchannelBackendPluginTargets.cmake  Qt6QTlsBackendCertOnlyPluginTargets.cmake  Qt6QTlsBackendOpenSSLPluginConfigVersion.cmake  Qt6QTlsBackendOpenSSLPluginTargets-debug.cmake  Qt6QTlsBackendOpenSSLPluginTargets.cmake
rl-3rdparty/lib/cmake/Qt6OpenGL/: Qt6OpenGLDependencies.cmake  Qt6OpenGLTargets-relwithdebinfo.cmake  Qt6OpenGLTargets.cmake
rl-3rdparty/lib/cmake/Qt6OpenGLWidgets/: Qt6OpenGLWidgetsTargets-relwithdebinfo.cmake  Qt6OpenGLWidgetsTargets.cmake
rl-3rdparty/lib/cmake/Qt6PngPrivate/: Qt6PngPrivateTargets.cmake
rl-3rdparty/lib/cmake/Qt6PrintSupport/: Qt6PrintSupportTargets-relwithdebinfo.cmake  Qt6PrintSupportTargets.cmake
rl-3rdparty/lib/cmake/Qt6Sql/: Qt6QODBCDriverPluginTargets-debug.cmake  Qt6QODBCDriverPluginTargets.cmake  Qt6QPSQLDriverPluginConfigVersion.cmake  Qt6QPSQLDriverPluginTargets-debug.cmake  Qt6QPSQLDriverPluginTargets.cmake  Qt6SqlTargets-debug.cmake  (+4 more)
rl-3rdparty/lib/pkgconfig/: ccd.pc  fcl.pc  libexslt.pc  libxml-2.0.pc  libxslt.pc  nlopt.pc  ode.pc
rl/debug/lib/: rlhalsd.lib  rlkinsd.lib  rlmdlsd.lib  rlplansd.lib  rlsgsd.lib
rl/release/lib/: rlhals.lib  rlkins.lib  rlmdls.lib  rlplans.lib  rlsgs.lib
source/: CMakeLists.txt  data.h  motioner.cpp  motioner.h  utils.cpp
tests/: CMakeLists.txt  common.h  main.cpp  xMateCR7.urdf
tests/test_base_info/: CMakeLists.txt  main.cpp
tests/test_convert/: CMakeLists.txt  main.cpp
tests/test_forward/: CMakeLists.txt  main.cpp
tests/test_inverse/: CMakeLists.txt  main.cpp
(+303 files in other folders)
